--- a/requirements.txt
+++ b/requirements.txt
@@ -1,236 +1,216 @@
-absl-py==0.11.0
-alabaster==0.7.12
-anaconda-client==1.7.2
-anaconda-project==0.8.3
-applaunchservices==0.2.1
-appnope==0.1.0
-argh==0.26.2
-asgiref==3.3.1
-asn1crypto==1.3.0
-astor==0.8.1
-astropy==4.0.1.post1
-atomicwrites==1.4.0
-attrs==19.3.0
-Babel==2.8.0
-backcall==0.2.0
-backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4==4.9.1
-bkcharts==0.2
-bleach==3.3.0
-bokeh
-boto==2.49.0
-Bottleneck==1.3.2
-brotlipy==0.7.0
-certifi==2020.6.20
-cffi==1.14.0
-chardet==3.0.4
-click==7.1.2
-cloudpickle
-clyent==1.2.2
-colorama==0.4.3
-contextlib2==0.6.0.post1
+absl-py==1.4.0
+anaconda-client==1.9.0
+anaconda-project==0.11.0
+appnope==0.1.3
+argh==1.26.2
+asgiref==3.6.0
+asn1crypto==1.5.1
+astropy==5.2
+attrs==23.1.0
+Babel==2.12.1
+beautifulsoup4==4.12.2
+bleach==6.0.0
+bokeh==3.1.2
+Bottleneck==1.3.4
+certifi==2023.12.7
+cffi==1.15.1
+chardet==5.1.0
+click==8.1.3
+cloudpickle==2.2.1
+colorama==0.4.6
+contextlib2==21.6.0
 contextvars==2.4
-cryptography==3.3.2
-cycler==0.10.0
-Cython
-cytoolz==0.10.1
-dask @ file:///tmp/build/80754af9/dask-core_1594156306305/work
-decorator==4.4.2
-defusedxml==0.6.0
-distributed
-Django==3.1.13
-docutils==0.16
-entrypoints==0.3
-et-xmlfile==1.0.1
-fastcache==1.1.0
-filelock==3.0.12
-flake8==3.8.3
-Flask==1.1.2
-fsspec==0.7.4
-future==0.18.2
-gast==0.2.2
-gevent
+cryptography==40.0.1
+cycler==0.11.0
+Cython==3.0.0
+cytoolz==0.12.0
+dask==2023.12.0
+decorator==5.1.1
+defusedxml==0.7.1
+distributed==2023.12.0
+Django==4.2.5
+docutils==0.19
+entrypoints==0.4
+et-xmlfile==1.1.0
+filelock==3.12.0
+flake8==6.0.0
+Flask==2.3.2
+fsspec==2023.12.0
+future==0.18.3
+gast==0.4.0
+gevent==22.10.2
 glob2==0.7
-gmpy2==2.0.8
-google-pasta==0.2.0
-greenlet==0.4.16
-grpcio==1.33.2
-h5py==2.10.0
-HeapDict==1.0.1
-html5lib
-idna
-imageio
-imagesize==1.2.0
-immutables
-importlib-metadata
-intervaltree
-ipykernel
-ipython
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isort==4.3.21
-itsdangerous==1.1.0
+gmpy2==2.1.5
+greenlet==2.0.2
+grpcio==1.54.2
+h5py==3.9.0
+html5lib==1.1
+idna==3.4
+imageio==2.31.1
+imagesize==1.4.4
+immutables==0.19
+importlib-metadata==6.8.0
+intervaltree==3.1.0
+ipykernel==6.23.1
+ipython==8.14.0
+ipywidgets==8.0.6
+isort==5.12.0
+itsdangerous==2.1.2
 jdcal==1.4.1
-jedi
-Jinja2==2.11.3
-joblib
-json5==0.9.5
-jsonschema==3.2.0
+jedi==0.19.0
+Jinja2==3.1.2
+joblib==1.3.2
+json5==0.9.13
+jsonschema==4.19.1
 jupyter==1.0.0
-jupyter-client
-jupyter-console==6.1.0
-jupyter-core==4.6.3
-jupyterlab==2.2.10
-jupyterlab-server
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-keyring
-kiwisolver==1.2.0
-lazy-object-proxy==1.4.3
-libarchive-c==2.9
-llvmlite==0.33.0+1.g022ab0f
-locket==0.2.0
-lxml
-Markdown==3.3.3
-MarkupSafe==1.1.1
-matplotlib
-mccabe==0.6.1
-mistune==0.8.4
-mkl-fft==1.0.14
-mkl-random==1.0.4
-mkl-service==2.3.0
-mock==4.0.2
-more-itertools==8.4.0
-mpld3==0.5.2
-mpmath==1.1.0
-msgpack==1.0.0
+jupyter-client==8.4.0
+jupyter-console==6.6.3
+jupyter-core==5.3.1
+jupyterlab==4.0.3
+jupyterlab-server==3.7.1
+keyring==24.3.0
+kiwisolver==1.4.4
+lazy-object-proxy==1.9.0
+libarchive-c==2.10
+llvmlite==0.40.0
+locket==1.0.0
+lxml==4.9.3
+Markdown==3.4.3
+MarkupSafe==2.1.3
+matplotlib==3.7.2
+mccabe==0.7.0
+mistune==3.0.1
+mkl-fft==1.3.0
+mkl-random==1.3.2
+mkl-service==2.4.0
+mock==4.0.3
+more-itertools==9.0.0
+mpld3==0.5.9
+mpmath==1.3.0
+msgpack==1.0.5
 multipledispatch==0.6.0
-multitasking==0.0.9
-nbconvert==5.6.1
-nbformat==5.0.7
-networkx 
-nose==1.3.7
-notebook==6.4.1
-numba==0.50.1
-numexpr==2.7.1
-numpy==1.17.0
-numpydoc
+multitasking==0.0.11
+nbconvert==7.3.1
+nbformat==5.8.0
+networkx==3.1
+notebook==6.5.4
+numba==0.56.4
+numexpr==2.8.4
+numpy==1.25.3
+numpydoc==1.5.0
 olefile==0.46
-opencv-python==4.4.0.46
-openpyxl
+opencv-python==4.7.0.72
+openpyxl==3.1.2
 opt-einsum==3.3.0
-packaging==20.4
-pandas
-pandas-datareader==0.9.0
-pandocfilters==1.4.2
-parso==0.7.0
-partd==1.1.0
+packaging==23.1
+pandas==2.1.1
+pandas-datareader==0.10.0
+pandocfilters==1.5.0
+parso==0.8.3
+partd==1.4.0
 path==13.1.0
-pathlib2==2.3.5
+pathlib2==2.3.7
 pathtools==0.1.2
-patsy==0.5.1
-pep8==1.7.1
+patsy==0.5.3
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==8.3.2
-pkginfo==1.5.0.1
-pluggy==0.13.1
+Pillow==10.0.0
+pkginfo==1.9.6
+pluggy==1.0.0
 ply==3.11
-prometheus-client==0.8.0
-prompt-toolkit==3.0.5
-protobuf==3.14.0
-psutil==5.7.0
-ptyprocess==0.6.0
-pycodestyle==2.6.0
-pycosat==0.6.3
-pycparser
-pycrypto==2.6.1
-pycurl==7.43.0.5
-pydocstyle
-pyflakes==2.2.0
-Pygments==2.7.4
-pylint
-pyodbc===4.0.0-unsupported
-pyOpenSSL
-pyparsing==2.4.7
-pyrsistent==0.16.0
+prometheus-client==0.17.0
+prompt-toolkit==3.0.38
+protobuf==4.23.4
+psutil==5.9.4
+ptyprocess==0.7.0
+pycodestyle==2.10.0
+pycosat==0.6.4
+pycparser==2.21
+pycurl==7.45.0
+pydocstyle==6.3.0
+pyflakes==3.0.1
+Pygments==2.16.1
+pylint==2.19.5
+pyodbc==4.0.35
+pyOpenSSL==23.1.1
+pyparsing==3.1.1
+pyrsistent==0.19.3
 PySocks==1.7.1
-pytest==5.4.3
-python-dateutil==2.8.1
-python-jsonrpc-server 
-python-language-server
-pytz==2020.1
-PyWavelets==1.1.1
-PyYAML==5.4
-pyzmq==19.0.1
-QDarkStyle==2.8.1
-QtAwesome==0.7.2
-qtconsole
-QtPy==1.9.0
-regex
-requests
-rope==0.17.0
-Rtree==0.9.4
-ruamel-yaml==0.15.87
-scikit-image==0.16.2
-scikit-learn
-scipy==1.0.1
-seaborn==0.10.1
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.15.0
-snowballstemmer==2.0.0
-sortedcollections==1.2.1
-sortedcontainers==2.2.2
-soupsieve==2.0.1
-Sphinx
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
+pytest==7.4.0
+python-dateutil==2.8.2
+python-jsonrpc-server==0.4.0
+python-language-server==0.42.0
+pytz==2023.3
+PyWavelets==1.4.1
+PyYAML==6.0
+pyzmq==25.1.1
+QDarkStyle==3.0.2
+QtAwesome==1.3.2
+qtconsole==5.5.2
+QtPy==2.3.1
+regex==2023.10.31
+requests==2.31.0
+rope==1.8.1
+Rtree==1.0.1
+ruamel-yaml==0.17.21
+scikit-image==0.20.0
+scikit-learn==1.3.0
+scipy==1.10.1
+seaborn==0.12.2
+Send2Trash==1.8.0
+singledispatch==3.8.0.1
+six==1.16.0
+snowballstemmer==2.2.0
+sortedcollections==3.2.2
+sortedcontainers==3.2.0
+soupsieve==2.4
+Sphinx==6.6.0
+sphinxcontrib-applehelp==1.0.3
+sphinxcontrib-devhelp==1.0.3
+sphinxcontrib-htmlhelp==2.0.0
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-sphinxcontrib-websupport
-spyder
-spyder-kernels
-SQLAlchemy
-sqlparse==0.4.2
-statsmodels==0.11.1
-sympy
-tables==3.6.1
-tblib==1.6.0
-tensorboard==1.15.0
-tensorflow==2.5.1
-tensorflow-estimator==1.15.1
-termcolor==1.1.0
-terminado==0.8.3
-testpath==0.4.4
-threadpoolctl
-toml
-toolz==0.10.0
-tornado==6.0.4
-tqdm
-traitlets==4.3.3
-typed-ast==1.4.1
-typing-extensions
-ujson==1.35
-unicodecsv==0.14.1
-urllib3==1.26.5
-watchdog
-wcwidth
+sphinxcontrib-qthelp==1.0.5
+sphinxcontrib-serializinghtml==1.1.5
+sphinxcontrib-websupport==2.1.0
+spyder==5.5.4
+spyder-kernels==2.3.6
+SQLAlchemy==2.0.20
+sqlparse==0.4.4
+statsmodels==0.14.0
+sympy==1.12
+tables==3.8.0
+tblib==1.7.0
+tensorboard==2.13.0
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+termcolor==2.3.0
+terminado==0.17.0
+testpath==0.6.1
+threadpoolctl==3.2.0
+toml==0.10.2
+toolz==0.12.0
+tornado==7.1.3
+tqdm==4.66.1
+traitlets==5.9.0
+typed-ast==1.5.4
+typing-extensions==4.7.1
+ujson==5.7.0
+unicodecsv==1.1.0
+urllib3==2.0.4
+watchdog==3.0.0
+wcwidth==0.2.6
 webencodings==0.5.1
-Werkzeug==1.0.1
-widgetsnbextension==3.5.1
-wrapt==1.11.2
-wurlitzer
-xlrd==1.2.0
-XlsxWriter==1.2.9
-xlwings==0.19.5
-xlwt==1.2.0
-yapf
-yfinance==0.1.55
+Werkzeug==2.3.4
+widgetsnbextension==4.0.5
+wrapt==1.15.0
+wurlitzer==3.0.4
+xlrd==2.0.1
+XlsxWriter==3.1.5
+xlwings==0.28.1
+xlwt==1.3.0
+yapf==0.32.0
+yfinance==0.2.31
 zict==2.0.0
-zipp==3.1.0
-zope.event==4.4
-zope.interface==4.7.1
+zipp==3.15.0
+zope.event==4.6
+zope.interface==6.0.0
