--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,32 @@
 absl-py==1.4.0
+alabaster==0.7.12
 anaconda-client==1.9.0
 anaconda-project==0.11.0
+applaunchservices==0.2.1
 appnope==0.1.3
 argh==1.26.2
 asgiref==3.6.0
 asn1crypto==1.5.1
+astor==0.8.1
 astropy==5.2
+atomicwrites==1.4.0
 attrs==23.1.0
 Babel==2.12.1
+backcall==0.2.0
+backports.shutil-get-terminal-size==1.0.0
 beautifulsoup4==4.12.2
+bkcharts==0.2
 bleach==6.0.0
 bokeh==3.1.2
+boto==2.49.0
 Bottleneck==1.3.4
+brotlipy==0.7.0
 certifi==2023.12.7
 cffi==1.15.1
 chardet==5.1.0
 click==8.1.3
 cloudpickle==2.2.1
+clyent==1.2.2
 colorama==0.4.6
 contextlib2==21.6.0
 contextvars==2.4
@@ -32,6 +42,7 @@ Django==4.2.5
 docutils==0.19
 entrypoints==0.4
 et-xmlfile==1.1.0
+fastcache==1.1.0
 filelock==3.12.0
 flake8==6.0.0
 Flask==2.3.2
@@ -41,9 +52,11 @@ gast==0.4.0
 gevent==22.10.2
 glob2==0.7
 gmpy2==2.1.5
+google-pasta==0.2.0
 greenlet==2.0.2
 grpcio==1.54.2
 h5py==3.9.0
+HeapDict==1.0.1
 html5lib==1.1
 idna==3.4
 imageio==2.31.1
@@ -53,6 +66,7 @@ importlib-metadata==6.8.0
 intervaltree==3.1.0
 ipykernel==6.23.1
 ipython==8.14.0
+ipython-genutils==0.2.0
 ipywidgets==8.0.6
 isort==5.12.0
 itsdangerous==2.1.2
@@ -68,6 +82,8 @@ jupyter-console==6.6.3
 jupyter-core==5.3.1
 jupyterlab==4.0.3
 jupyterlab-server==3.7.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
 keyring==24.3.0
 kiwisolver==1.4.4
 lazy-object-proxy==1.9.0
@@ -93,6 +109,7 @@ multitasking==0.0.11
 nbconvert==7.3.1
 nbformat==5.8.0
 networkx==3.1
+nose==1.3.7
 notebook==6.5.4
 numba==0.56.4
 numexpr==2.8.4
@@ -112,6 +129,7 @@ path==13.1.0
 pathlib2==2.3.7
 pathtools==0.1.2
 patsy==0.5.3
+pep8==1.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==10.0.0
@@ -126,6 +144,7 @@ ptyprocess==0.7.0
 pycodestyle==2.10.0
 pycosat==0.6.4
 pycparser==2.21
+pycrypto==2.6.1
 pycurl==7.45.0
 pydocstyle==6.3.0
 pyflakes==3.0.1
@@ -158,6 +177,7 @@ scikit-learn==1.3.0
 scipy==1.10.1
 seaborn==0.12.2
 Send2Trash==1.8.0
+simplegeneric==0.8.1
 singledispatch==3.8.0.1
 six==1.16.0
 snowballstemmer==2.2.0
@@ -195,7 +215,7 @@ traitlets==5.9.0
 typed-ast==1.5.4
 typing-extensions==4.7.1
 ujson==5.7.0
-unicodecsv==1.1.0
+unicodecsv==0.14.1
 urllib3==2.0.4
 watchdog==3.0.0
 wcwidth==0.2.6
